network_policy/np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: new-np
  namespace: my-namespace
spec:
  podSelector:
  policyType:
    - Ingress
    - Egress
  ingress:
    - from:
      - namespaceSelector:
        podSelector:
          matchLabels:
            k8s-app: kube-dns
    - from: # Aloows traffic from smae namespace
      - podSelector: {}
        
      ports:
        - port: 53
          protocol: UDP 
  egress:
    - to:
      - namespaceSelector: {}
        podSelector:
          matchLabels:
            k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
